# better-ssh

./: .coveragerc  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CI_CD.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  release.yml  tests.yml
app/: cli.py  domain.py  encryption.py  models.py  ssh.py  ssh_config.py  storage.py
app/cli/: __init__.py  _shared.py  backup.py  connection.py  crypto.py  exec_cmd.py  health.py  manage.py  organize.py  transfer.py
docs/: index.html  style.css
tests/: __init__.py  conftest.py  test_cli.py  test_domain.py  test_encryption.py  test_exec_cmd.py  test_models.py  test_ssh.py  test_ssh_config.py  test_storage.py  test_transfer.py
